log
Thu 28 Sep 2023 07:23:18 PM UTC: 
 tests:  0|4
total_score: 0/70
8e61835
Mon 16 Oct 2023 02:32:03 AM UTC: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
heap.c: In function ‘createHeap’:
heap.c:36:9: error: unused variable ‘reserva’ [-Werror=unused-variable]
   36 |   Heap* reserva=(Heap*)malloc(sizeof(Heap));
      |         ^~~~~~~
cc1: all warnings being treated as errors
Compilation failed
3a8d86f
Mon 16 Oct 2023 02:33:20 AM UTC: 
 heap.c | 2 ++
 1 file changed, 2 insertions(+)
 tests:  0|4
total_score: 0/70
0539524
Mon 16 Oct 2023 02:33:55 AM UTC: 
 heap.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
 tests:  1|3
total_score: 10/70
3b28c0d
Mon 16 Oct 2023 02:36:02 AM UTC: 
 heap.c | 5 +++++
 1 file changed, 5 insertions(+)
 tests:  1|3
total_score: 10/70
4a0c710
Mon 16 Oct 2023 02:36:14 AM UTC: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|3
total_score: 10/70
2b70c10
